create github pages

--- a/community.html
+++ b/community.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -165,8 +165,8 @@
         
 
         <div class="media-container-row mt-5 pt-3">
-            <div class="mbr-figure" style="width: 45%;">
-                <img src="assets/images/59767611-2640622716008333-2151945852732571648-n-670x960.jpg" alt="Mobirise" title="">
+            <div class="mbr-figure" style="width: 35%;">
+                <img src="assets/images/week-1-lhs-nick-gould-kiley-burger-1-200x300.jpg" alt="Mobirise" title="">
             </div>
             <div class="tabs-container">
                 <ul class="nav nav-tabs" role="tablist">
@@ -183,15 +183,16 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to the final recipient of the Barrett Insurance Student of the Week Award of Excellence for the 2018-2019 academic calendar year, Olivia Huggett!
-<br>
-<br>Olivia is a senior at Will Carleton Academy (WCA).
-<br>
-<br>According to WCA Student Services Coordinator, Mrs. Rogers, “Olivia has displayed excellent leadership skills as the President of the Student Council this year. She leads meetings efficiently, organizes and plans events, and is a positive role model for all students. Specifically, Olivia worked diligently on the 2019 Prom and it was a huge success! Many hours of her personal time were spent planning, organizing and decorating for this event. I am very proud of the way she has shown dedication to her school and peers!"
-<br>
-<br>Congratulations, Olivia!
-<br>
-<br>Keep up your great work!<br></p>
+                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to the first recipient of the Barrett Insurance Student of the
+<br>Week Award of Excellence for the 2019-2020 academic school year, Nick
+<br>Gould!
+<br><br>Nick is a junior at Litchfield High School (LHS).
+<br>According to LHS Math teacher, Jessica VanDusen,“Nick had perfect
+<br>attendance for the summer program and worked hard each day to
+<br>complete his assignments. We are proud of Nick for his hard work and
+<br>accomplishments this summer!”
+<br>Congratulations, Nick!
+<br>Keep up your great work.<br></p>
                             </div>
                         </div>
                     </div>
@@ -221,7 +222,7 @@
                                 <p class="mbr-text py-5 mbr-fonts-style display-7"><strong>(in alphabetical order by first name) 
 </strong><br>
 <br>Adrianna Aemisegger<br>Alexis Higgins<br>Allyson Rubley,  
-<br>Alyssa Forbes<br>Alyssa Phillips<br>Angelee Coleman<br>Ashley Stead<br>Ashley Terpening<br>Blaine Randall<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Brink<br>Carter Riley<br>Cecilia Mende<br>Ciara Smalls<br>Craig Court<br>Dale Wagner<br>Gabe Healy<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hayley Sims<br>Hunter Rubley<br>Jacob Hart<br>Jacob Scoville<br>Jay Close<br>Jena Fellabaum<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Keagan Gimenez<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Makayla Percy<br>Marshall Mapes<br>Maxim Hayes<br>Michael Jonas<br>Michael Rhoades<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Rebecca Butters<br>Ryan Reiniche<br>Thomas Hull<br>Timothy Hardway<br>Zach WIlson</p>
+<br>Alyssa Forbes<br>Alyssa Phillips<br>Angelee Coleman<br>Ashley Stead<br>Ashley Terpening<br>Blaine Randall<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Brink<br>Carter Riley<br>Cecilia Mende<br>Ciara Smalls<br>Craig Court<br>Dale Wagner<br>Gabe Healy<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hayley Sims<br>Hunter Rubley<br>Jacob Hart<br>Jacob Scoville<br>Jay Close<br>Jena Fellabaum<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Keagan Gimenez<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Makayla Percy<br>Marshall Mapes<br>Maxim Hayes<br>Michael Jonas<br>Michael Rhoades<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Rebecca Butters<br>Ryan Reiniche<br>Thomas Hull<br>Timothy Hardway<br>Zach WIlson</p>
                             </div>
                         </div>
                     </div>
