--- a/newsletter.html
+++ b/newsletter.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="services1 cid-rAIJV3e9ln" id="services1-8w">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="services1 cid-rAIJV3e9ln" id="services1-8w">
     <!---->
     
     <!---->
