--- a/cyndi.html
+++ b/cyndi.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -157,7 +157,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tFC4x3Ch6T+3wbJnpRD5oE8I+d2f1LR4v1mBno4vbsLQ8v34oEpT/4FCTW4tB+IuLcJbS+YiOSgkxB5gtb6jkfDjr7lhJlszVrn/rwrM3OWi7C2juC5yfiglBJlARYxr">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jFnINKMA9Ntw1/R1jawc1BMKTFW/kuYejRdO/WZsB2pyyC5WTMmtAJay8HJXevrUGn0Wt02ziydVjUeyXdewVxAQR3Os5RE+QUB4zfmvmzUTC2UUxGU5XRFbaxSurvoG">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
