create github pages

--- a/community.html
+++ b/community.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -187,12 +187,12 @@
 <br>Week Award of Excellence for the 2019-2020 academic school year, Nick
 <br>Gould!
 <br><br>Nick is a junior at Litchfield High School (LHS).
-<br>According to LHS Math teacher, Jessica VanDusen,“Nick had perfect
+<br><br>According to LHS Math teacher, Jessica VanDusen,“Nick had perfect
 <br>attendance for the summer program and worked hard each day to
 <br>complete his assignments. We are proud of Nick for his hard work and
 <br>accomplishments this summer!”
-<br>Congratulations, Nick!
-<br>Keep up your great work.<br></p>
+<br><br>Congratulations, Nick!
+<br><br>Keep up your great work.<br></p>
                             </div>
                         </div>
                     </div>
