--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -142,7 +142,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SOY5P9NvJv33PnKp8JPlr0wW3vyRdAT7TmQIaCfHWvmSiBUHCwQyPlDGbbDU2zbWG//gsvDXagVHIPOdckfIvM/AGVXdhxW0VM2XqQ4VmB8X7dJhnqrA4cYagQO8c3Ew">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Y8OTMX9Xr3frDXeyKmM452MdEOFJWs7OiagmLAfuwbhGgX0DxUXem/QuuiWlp7vgdZcBTvFPSGulX5Dtu/IsWTW0UWOVKonApmN40V/oK1hLlFUiIUfjXwDVpV8wjUGP">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
