--- a/cyndi.html
+++ b/cyndi.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -157,7 +157,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jFnINKMA9Ntw1/R1jawc1BMKTFW/kuYejRdO/WZsB2pyyC5WTMmtAJay8HJXevrUGn0Wt02ziydVjUeyXdewVxAQR3Os5RE+QUB4zfmvmzUTC2UUxGU5XRFbaxSurvoG">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KcQss7Z1SJWpyCk5MATHaUy+FbXy/H8ZyJkB86XjaZN78rfF16vd6e+lndEP8dEm99rcyUVxAOgRQ/uH33xQF+GmCjMJOhDcf82tOhFFaCfaO0HJhBztcrMn1SNzi9yH">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
