--- a/community.html
+++ b/community.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -165,8 +165,8 @@
         
 
         <div class="media-container-row mt-5 pt-3">
-            <div class="mbr-figure" style="width: 25%;">
-                <img src="assets/images/hunter-duke-kiley-burger-197x550.jpg" alt="Mobirise" title="">
+            <div class="mbr-figure" style="width: 34%;">
+                <img src="assets/images/week-3-montana-gray-najhs-428x682.jpg" alt="Mobirise" title="">
             </div>
             <div class="tabs-container">
                 <ul class="nav nav-tabs" role="tablist">
@@ -183,16 +183,15 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-7">"Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Hunter Duke!
+                                <p class="mbr-text py-5 mbr-fonts-style display-7">"Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Montana Gray!
 <br>
-<br>Hunter is a senior at Litchfield High School (LHS).
-Hunter remains involved in National Honor Society, Hillsdale County Early Middle College, Football, and Basketball.
+<br>Montana is a junior at North Adams-Jerome High School. She remains active in Student Council and a new peer to peer support group. 
+<br><br>According to NAJHS English &amp; Art teacher, Karen Christiansen,“ Montana is hardworking and helpful. She is a good motivator for her peers. It is a pleasure to have Montana in class because she always goes the extra mile.”
 <br>
-<br>According to LHS Math teacher, Jessica VanDusen,“Hunter is an outstanding student. He is involved in several school activities and is also participating in the Hillsdale County Early Middle College program. He works hard to be a leader for his peers and underclassmen.”
-<br>
-<br>Hunter plans plans to transfer to Kellogg Community College and complete the Physical Therapy Assistant Program to become a Physical Therapy Assistant following graduation.
-<br>
-<br>Congratulations, Hunter! &nbsp;Keep up your great work.<br></p>
+<br>Montana plans to become a social worker following graduation. 
+<br><br>Congratulations, Montana!
+Keep up your great work.
+<br></p>
                             </div>
                         </div>
                     </div>
@@ -222,7 +221,7 @@ Hunter remains involved in National Honor Society, Hillsdale County Early Middle
                                 <p class="mbr-text py-5 mbr-fonts-style display-7"><strong>(in alphabetical order by first name) 
 </strong><br>
 <br>Adrianna Aemisegger<br>Alexis Higgins<br>Allyson Rubley,  
-<br>Alyssa Forbes<br>Alyssa Phillips<br>Angelee Coleman<br>Ashley Stead<br>Ashley Terpening<br>Blaine Randall<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Brink<br>Carter Riley<br>Cecilia Mende<br>Ciara Smalls<br>Craig Court<br>Dale Wagner<br>Gabe Healy<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Jacob Hart<br>Jacob Scoville<br>Jay Close<br>Jena Fellabaum<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Keagan Gimenez<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Makayla Percy<br>Marshall Mapes<br>Maxim Hayes<br>Michael Jonas<br>Michael Rhoades<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Rebecca Butters<br>Ryan Reiniche<br>Thomas Hull<br>Timothy Hardway<br>Zach WIlson</p>
+<br>Alyssa Forbes<br>Alyssa Phillips<br>Angelee Coleman<br>Ashley Stead<br>Ashley Terpening<br>Blaine Randall<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Brink<br>Carter Riley<br>Cecilia Mende<br>Ciara Smalls<br>Craig Court<br>Dale Wagner<br>Gabe Healy<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Jacob Hart<br>Jacob Scoville<br>Jay Close<br>Jena Fellabaum<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Keagan Gimenez<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Makayla Percy<br>Marshall Mapes<br>Maxim Hayes<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Rebecca Butters<br>Ryan Reiniche<br>Thomas Hull<br>Timothy Hardway<br>Zach WIlson</p>
                             </div>
                         </div>
                     </div>
