--- a/cyndi.html
+++ b/cyndi.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own website for free</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -157,7 +157,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pqtpqRcwHYVa0BHbX0RO4GSfWq6KGiPYWCL1H5IUJyVBBeYFcZEk6tUJPXNnFlbwMojxcMyXTLvZVbkDV4FBPCV0qLOVjBXbeBt6dqzpocOTke9QTrcY+/RujEq+E4Ta">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BevFHMqdByTO1PySjRi6nOKyoJf3w0iFdjMoJWvpspGwMvGD0G9EkEHtFYTtW6jgPi+xvapFbWx3ZH2wLaSEq+RpPHR7klKjmgpThafuVdYiNrCnFfLjLdHYrqgQSQ+p">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
