--- a/aaron.html
+++ b/aaron.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -80,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="mbr-section content5 cid-r6Qg8n0nlW" id="content5-4r">
+<section class="engine"><a href="https://mobirise.info/g">build a website</a></section><section class="mbr-section content5 cid-r6Qg8n0nlW" id="content5-4r">
 
     
 
@@ -157,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wYiJIXxZjl0b+Y8VX5MK09P47W78rThXWsHpQbN1pLpuhYbXQkpR5u1GngjKwcRwQSVvL6RNuYhyjQZUVj4oPFZAT6nAlJEIrsg1YKhui5VndmXNqfAHxwSIB8PCU6ps">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QX0nN4oT7XhP1Qrbu0jtbiN7n3dgap/DzfnEEMvMiTeITmguReZh5mR9Cr/TqFtuFfdyzd1hUJMFVBQyNIMviinskQs530TVlN/17LKfgahJy+nWK7xK01lFJpgKcdTE">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
