--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
   <title>Barrett Insurance Agency | Jonesville, MI</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -82,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
 
     
 
@@ -461,7 +460,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Ia2nl1btfVOKUhpGuiZh2a+djccp7P91PlOcn82gAoaS5n93dcG5DZeuZ9n4luWz+H4RFf6tNcj5SC2qtx/COXoIe1lFbUZoypfasesxXSYQASry4gDT1HFmxpvlosV1">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Dpi+PSjBMadovVXX6MT5jSHYC1lNL9eV5riD18Twn7DAU+gBNwHfoy/zw1ZFrJ8YB00pXnX933fjVwj3k8+S/IwWdwTQ3sCfNeOszdExCMw+m/wUJptR6x0cR8eiO9P9">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-6y">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Subscribe</button></span>
@@ -513,12 +512,12 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/slidervideo/script.js"></script>
