--- a/media.html
+++ b/media.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section content5 cid-r6QfBGX7tp" id="content5-4b">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="mbr-section content5 cid-r6QfBGX7tp" id="content5-4b">
 
     
 
@@ -351,9 +351,8 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-8e" data-rv-view="620" style="background-color: rgb(255, 255, 255); padding-top: 3rem; padding-bottom: 3rem;">
-    <!-- Gallery -->
-    <div class="mbr-section__container mbr-gallery-layout-article addons-container addons-row">
+<section class="mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-8e" data-rv-view="510" style="background-color: rgb(255, 255, 255); padding-top: 3rem; padding-bottom: 3rem;">
+    <div class="mbr-section__container addons-container addons-row">
             <div class=" addons-container-inner">
                 <figure class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-outside-bottom">
                     <iframe class="mbr-embedded-video" frameborder="0" allowfullscreen="" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F588920592&amp;amp;auto_play=false&amp;amp;hide_related=false&amp;amp;show_comments=true&amp;amp;show_user=true&amp;amp;show_reposts=false&amp;amp;visual=true"></iframe>
