--- a/proposal.html
+++ b/proposal.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -80,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own site for free</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -145,7 +144,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form! One of our insurance experts will contact you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EB05h56rUeV8wzrUx4Lw/rXxsy/eU0qeka5n0foKV1p1suK2cUKo5xpMOsMvc53D7boJFOMZ6gWTXAZ7+d+h7a6kQCcj8FN9dnQtIFOG32QK7+8GhH4Q1sFlchdt4vip">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="y7ypvInEwNOo1vv7N9Nymcgd5jucJLT54zYAI9tpjUZoXcgsqhGVFC6fDrxjWn/LE3a7dKaXULzluQRfFccwghwTWJVYax0ILUk0qL++JuRZuDgIHOMdTePbbFSdd5/N">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
