--- a/tracey.html
+++ b/tracey.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -80,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-r6QfXBAuze" id="content5-4l">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-section content5 cid-r6QfXBAuze" id="content5-4l">
 
     
 
@@ -157,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Ks22COpwCaPeoE6Je4QWw5r0+ptqI4x4oMt44N9Ia4WP1Rx4BGr1KtrYrdtu0crgHbuLR+/lx6KcDsHhjgiPa3AHGMTj1RVBj3TGfRNzYg9jS+YOvI4//X9q6uyddBKo">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DKbaMK1YOgOXdigMM4UNGtGWVMQTjSwA7C7FxkcNhTnpil1TeAe1pz2hHL1Zc+9O9jJQKYNfkGtXXdQ1vsI8Raxliz8GNitZr5nQ3VQFi3p946VsSA+fu6i4LU8Y/tV0">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
