--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JX8aAzKMg5s+eyrWxnlQS3J+w/+WgU2v5iqahZXM7ErxLlwocIdgRpzssCIv8FjFewrawNoV9aJ0lBdHgiWT4dmoY0QJpGE8JFLJAvWPrYv8MCbTHha7XwA6RjH0482q">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fmcW/9YQQjMU+NuZSVslXKvgZGWIPAS4aqco0R5vrnCJ94c6DJqSvwEMcfQn6fcECzEbx/crmhjOz6mtFtEtWqdRJtgPNoaDHU1mTSpUP9SCmM0BAjQuOvu3rnFD/CZ1">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
