create github pages

--- a/joe.html
+++ b/joe.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7NTvDK886qhrDYxRDZGMGESLvkRp+ZH0seSju9hisviO5rUPpQPSsdXLmXZsUCxEFEObcKuhXnNEEOIyq+j2jOifdg2GBjwrrJISNegNx+itoQpgR6fiv2C0kT8YNBa+">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Vvzbz7Oye+D2QBYS4k9R22sMMh2G7HTpateiljTUFNpbk9s+6Kq9QYoJeP6ju45JPhCjUN0rhY9WK32frxlIwE9sWtKjEqWBF5o9mFA+nk7bdfWoReVVday6Gdr8Ov7K">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
